--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,48 @@
-wget==3.2
-tqdm==4.36.1
-numpy==1.16.2
-torch==1.3.0
-tb-nightly==2.1.0a20191121
-pandas==0.25.0
-scipy==1.3.2
-future==0.18.2
-wikipedia2vec==1.0.5
+absl-py==0.12.0
+cachetools==4.2.2
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
 fastnode2vec==0.0.5
+future==0.18.2
+gensim==4.0.1
+google-auth==1.30.2
+google-auth-oauthlib==0.4.4
+grpcio==1.38.0
+idna==2.10
+jieba==0.42.1
+joblib==1.0.1
+llvmlite==0.36.0
+lmdb==1.2.1
+marisa-trie==0.7.5
+Markdown==3.3.4
+mwparserfromhell==0.6.2
+numba==0.53.1
+numpy==1.21.0
+oauthlib==3.1.1
+pandas==0.25.0
+pickle5==0.0.11
+Pillow==8.2.0
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+python-dateutil==2.8.1
+python-Levenshtein==0.12.2
+pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scipy==1.3.2
+six==1.16.0
+sklearn==0.0
+smart-open==5.1.0
+tb-nightly==2.1.0a20191121
+threadpoolctl==2.2.0
+torch==1.4.0
+torchvision==0.5.0
+tqdm==4.36.1
+urllib3==1.26.5
+Werkzeug==2.0.1
+wget==3.2
+wikipedia2vec==1.0.5
